argocd/infra/storage/garage/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: garage
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: garage
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: garage
      toPorts:
        - ports:
            - port: "3900"
              protocol: TCP
            - port: "3901"
              protocol: TCP
            - port: "3902"
              protocol: TCP
            - port: "3903"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: garage
      toPorts:
        - ports:
            - port: "3900"
              protocol: TCP
            - port: "3901"
              protocol: TCP
            - port: "3902"
              protocol: TCP
            - port: "3903"
              protocol: TCP
